--- a/todo_app/templates/todo_app/logged_out.html
+++ b/todo_app/templates/todo_app/logged_out.html
@@ -5,8 +5,10 @@
 </head>
 <body>
 
-<h2>Login</h2>
+<h2>Logged out</h2>
   You are logged out!
+
+<p> <a href="{% url 'login' %}"> Login again </a> </p>
 
 </body>
 </html>
