--- a/todo_app/templates/todo_app/home.html
+++ b/todo_app/templates/todo_app/home.html
@@ -4,12 +4,14 @@
   <title>Home</title>
 </head>
 <body>
-
+  {% if user.is_authenticated %}
+      hi! {{user.username}}<p> <a href="{% url 'logout' %}"> Logout </a> </p>
   <h1> Welcome to To-do list </h1>
   <h3> Now stay productive with To-do-lists </h3>
-  {% if user.is_authenticated %}
-      hi! <p> <a href="{% url 'logout' %}"> Logout </a> </p>
-      {% else %}
+{% else %}
+    <h1>To-do-List</h1>
+    <h3>Login to continue</h3>
+    <h3>Don't have an account?<a href="{% url 'signup' %}"> Signup here </a> </h3>
       <p> <a href="{% url 'login' %}">Login</a>
   {% endif %}
 
