--- a/todo_app/templates/todo_app/login.html
+++ b/todo_app/templates/todo_app/login.html
@@ -11,6 +11,7 @@
     {{ form.as_p }}
     <button type="submit">Login</button>
   </form>
+  <p> <a href="{% url 'password_reset' %}">Forgot password </a> </p>
 
 </body>
 </html>
