patches for user login

--- a/todo_app/templates/todo_app/login.html
+++ b/todo_app/templates/todo_app/login.html
@@ -4,7 +4,7 @@
   <title> Login </title>
 </head>
 <body>
-
+<h1> Welcome to your To-do-List </h1>
 <h2>Login</h2>
   <form method="post">
     {% csrf_token %}
