To-do form added for users

--- a/todo_app/templates/todo_app/home.html
+++ b/todo_app/templates/todo_app/home.html
@@ -13,6 +13,7 @@
       {{ work.task }}   {{ work.status }} <br>
       {% endfor %}
     </p>
+<p> <a href="{% url 'post_new' %}"> Create a new To-do </a> </p>
 
 {% else %}
     <h1>To-do-List</h1>
