--- a/todo_app/templates/todo_app/login.html
+++ b/todo_app/templates/todo_app/login.html
@@ -12,6 +12,6 @@
     <button type="submit">Login</button>
   </form>
   <p> <a href="{% url 'password_reset' %}">Forgot password </a> </p>
-
+<p> <h4> Don't have an account? <a href="{% url 'signup' %}"> Sign up here! </a> </h4> </p>
 </body>
 </html>
